--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 }
 :root{
     --butler: 'Butler', 'Arial', 'serif';
+    --beforeDisplay : 'block';
 }
 body{
     width: 100vw;
@@ -28,11 +29,13 @@ header{
     background-color: rgb(194, 142, 63);
     height: 30px;
 }
-.header__nav{
+.header__title{
     width: 100%;
     text-align: center;
-    padding-bottom: 30px;
+    padding: 15px;
     color: #fff;
+    text-transform: uppercase;
+    font-family: var(--butler);
 }
 
 .board{
@@ -52,18 +55,73 @@ header{
     background-image: url(./src/img/boardbg.jpg);
 }
 .board__start{
+    position: absolute;
+    z-index: 99;
     width: 100%;
     height: 100%;
-    backdrop-filter: blur(3px);
-    z-index: 99;
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    backdrop-filter: blur(2px);
 }
-.startBtn{
+.board__infoCard{
+    display: block;
+    position: absolute;
+    top: 50%;
+    right: 3%;
+    z-index: 100;
+    transform: translateY(-50%) rotate(-2deg);
+}
+.board__infoCard--modal, .leftBtn, .rightBtn, .board__eventCard--modal, .yesBtn, .noBtn{
+    background-image: url(./src/img/counterbg.png);
+    box-shadow: 3px 0 10px #000;
+    font-family: var(--butler);
+}
+.board__infoCard--modal{
+    height: 400px;
+    width: 300px;
+    background-color: #FFF;
+    margin-bottom: 10px;
+    border-radius: 10px;
+    overflow: hidden;
+    padding: 20px;
+    text-align: center;
+    letter-spacing: .5px;
+}
+.board__infoCard--buttons, .board__eventCard--buttons{
+    display: flex;
+    justify-content: space-between;
+}
+.leftBtn, .rightBtn, .yesBtn, .noBtn{
     padding: 10px 20px;
-    font-size: 30px;
+    font-size: 25px;
+    margin-bottom: 50px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transform: rotate(-2deg);
+}
+.rightBtn, .noBtn{
+    transform: translateY(5px) rotate(6deg);
+}
+.board__eventCard{
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 60%;
+    transform: translateY(-50%);
+    z-index: 98;
+}
+.board__eventCard--modal{
+    height: 400px;
+    width: 300px;
+    background-color: #FFF;
+    margin-bottom: 10px;
+    border-radius: 10px;
+    overflow: hidden;
+    padding: 20px;
+    text-align: center;
+    letter-spacing: .5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 .board__remain::before{
     content: '';
@@ -116,6 +174,8 @@ header{
 }
 .board__pot{
     position: relative;
+    left: 50%;
+    transform: translateX(-50%);
     width: 100%;
     height: 55%;
     background-color: #41362f;
@@ -124,9 +184,30 @@ header{
     background-position: center;
     border-radius: 5px;
     box-shadow: 3px 0 10px #000;
+    transition: .3s;
+}
+.board__pot--deck, .board__pot--eventCard{
+    position: absolute;
+    width: 150px;
+    height: 30px;
+    border: 1px solid #FFF;
+    top: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #FFF;
+}
+.board__pot--deck{
+    left: 30%;
+    transform: translateX(-50%);
+}
+.board__pot--eventCard{
+    left: 70%;
+    transform: translateX(-50%);
 }
 .board__pot--area::before{
     content: 'Cour';
+    display: var(--beforeDisplay);
     position: absolute;
     top: -45px;
     left: 50%;
@@ -152,6 +233,7 @@ header{
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: .3s;
 }
 .board__pot--cards{
     width: 15%;
@@ -200,22 +282,33 @@ header{
     justify-content: center;
 }
 .board__player--cards{
-    width: 30%;
+    width: 31%;
     margin: 0 .5%;
     height: 100%;
     border: 2px solid #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #FFF;
+    font-family: var(--butler);
 }
 .board__player1--hand, .board__player2--hand, .board__player3--hand, .board__player4--hand{
     width: 15%;
     height: 90%;
     border: 2px solid #000;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #FFF;
+    font-family: var(--butler);
 }
 
 
 .test{
     position: absolute;
     padding: 5px 15px;
-    z-index: 99;
+    z-index: 90;
     left: 12%;
     top: 50%;
     transform: translateY(-50%);
@@ -227,4 +320,5 @@ footer{
     left: 50%;
     transform: translateX(-50%);
     color: #fff;
+    font-family: var(--butler);
 }
